<resources>
    <string name="app_name">TaskApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_fragment_login">Login</string>
    <string name="text_fragment_register">Criar conta</string>
    <string name="text_fragment_recover_account">Recuperar conta</string>
    <string name="text_hint_email">E-mail</string>
    <string name="text_hint_password">Senha</string>
    <string name="button_login">Login</string>
    <string name="button_register">Criar conta</string>
    <string name="button_send">Enviar</string>
</resources>