<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:layout_weight="1.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fragment_login"
                android:textSize="24sp"
                android:layout_marginTop="60dp"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@mipmap/logo_task_app"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/text_hint_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/background_edittext"
                android:hint="@string/text_hint_password"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:drawableEnd="@drawable/ic_eye"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.7"
        android:gravity="center">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/background_login_btn"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_marginTop="8dp"
                android:text="@string/text_fragment_register"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/textRecoverAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:layout_marginTop="8dp"
                android:text="@string/text_fragment_recover_account"
                android:textAlignment="center"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>