<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.auth.RecoverAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@drawable/background"
            android:layout_weight="1.5">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/arrow_back"
                    android:tint="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_fragment_recover_account"
                    android:textSize="24sp"
                    android:layout_marginTop="60dp"
                    android:textColor="@color/white"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView"/>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/logo_task_app"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textView" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="64dp"
                    android:background="@drawable/background_edittext"
                    android:hint="@string/text_hint_email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textRecoverAccount" />

                <TextView
                    android:id="@+id/textRecoverAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="Informe seu e-mail para receber um link de alteração de senha"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.614"
                    app:layout_constraintStart_toStartOf="@id/textView"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="0.7"
            android:gravity="center">

            <Button
                android:id="@+id/buttonRecoverAccount"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/background_login_btn"
                android:layout_marginStart="64dp"
                android:layout_marginEnd="64dp"
                android:text="@string/button_send"
                android:textColor="@color/white"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>